--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:generate-pdf": "tsx scripts/generate-test-pdf.ts",
     "server": "tsx server.ts",
     "server:dev": "tsx watch server.ts"
   },
@@ -30,6 +33,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
@@ -37,14 +41,17 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.17",
     "autoprefixer": "^10.4.17",
+    "canvas": "^3.2.1",
     "jsdom": "^27.4.0",
+    "playwright": "^1.57.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.21.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "vite": "^7.3.1",
     "vitest": "^4.0.17"
   }
 }
