Enhance testing capabilities with browser support and new test scripts
- Added new test scripts in package.json for running browser tests using Vitest and Playwright.
- Updated vitest.config.ts to clarify testing environments and configurations.
- Improved vitest.setup.ts to conditionally mock DOM APIs based on the testing environment.
- Introduced a new browser test suite for PDF service functions, ensuring proper functionality in a real browser context.
- Updated README to reflect new testing commands and clarify test types.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
+    "test:browser": "vitest --browser.enabled --browser.name chromium --browser.provider playwright",
+    "test:browser:run": "vitest run --browser.enabled --browser.name chromium --browser.provider playwright",
+    "test:all": "npm run test:run && npm run test:browser:run",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:generate-pdf": "tsx scripts/generate-test-pdf.ts",
